src/components/Hypertext/Hypertext.module.scss
.hypertext {
  --text-decoration-color: var(--primary-base-00);
  --text-hover-color: var(--primary-dark);

  display: inline;
  width: fit-content;
  min-width: min-content;
  cursor: pointer;
  text-decoration: none;
  background: none;
  border: none;
  padding: 0;
  margin: 0;

  span[data-testid="text"] > &,
  span[data-testid="text"] > & > span[data-testid="text"] {
    font-size: inherit;
    font-weight: inherit;
    line-height: inherit;
    letter-spacing: inherit;
  }

  & > span[data-testid="text"] {
    text-decoration-color: var(--text-decoration-color);
    display: inherit;
    transition:
      color 300ms var(--bezier),
      text-decoration-color 300ms var(--bezier);
  }

  & > span,
  & > svg[data-testid="icon"]:last-child,
  & > svg[data-testid="icon"]:last-child > path {
    transition-duration: 300ms;
    transition-property: color, fill;
    transition-timing-function: var(--bezier);
  }

  & > svg[data-testid="icon"]:last-child {
    margin-left: var(--s-1);
    display: inline-block;
  }

  &:hover {
    & > span[data-testid="text"],
    & > svg[data-testid="icon"]:last-child,
    & > svg[data-testid="icon"]:last-child > path {
      transition-duration: 150ms;
    }

    & > span[data-testid="text"] {
      color: var(--text-hover-color);
      text-decoration-color: var(--text-hover-color);
    }

    & > svg[data-testid="icon"]:last-child,
    & > svg[data-testid="icon"]:last-child > path {
      fill: var(--text-hover-color);
    }
  }
}

